# Codex-Proxy-Server

./: README.md
Code/: Cargo.toml
Code/src/: main.rs
Code/src/core/: chat_completions.rs  client.rs  client_common.rs  config.rs  mod.rs  model_provider_info.rs  models.rs  openai_tools.rs
Code/src/login/: lib.rs  login_with_chatgpt.py  mod.rs
