[package]
name = "codex-proxy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = { version = "0.7", features = ["json", "tower-log"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication
dirs = "5"
base64 = "0.21"
jsonwebtoken = "9"
tempfile = "3"

# Streaming
bytes = "1"
async-stream = "0.3"
url = "2.5"
futures-util = "0.3"
once_cell = "1.21.3"

[dev-dependencies]
pretty_assertions = "1"
